[gd_scene load_steps=13 format=3 uid="uid://cd1va8cw55o28"]

[ext_resource type="Script" path="res://map-creator-test/meshes/map_block.gd" id="1_xyog2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vx0x7"]
albedo_color = Color(1, 1, 0.301961, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_1v533"]
material = SubResource("StandardMaterial3D_vx0x7")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b7p2p"]

[sub_resource type="PlaneMesh" id="PlaneMesh_stnwr"]
material = SubResource("StandardMaterial3D_b7p2p")
flip_faces = true

[sub_resource type="PlaneMesh" id="PlaneMesh_1oimp"]
size = Vector2(2, 3)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xiukr"]

[sub_resource type="PlaneMesh" id="PlaneMesh_nceey"]
material = SubResource("StandardMaterial3D_xiukr")
flip_faces = true
size = Vector2(2, 3)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qln6p"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7sxy3"]
material = SubResource("StandardMaterial3D_qln6p")
size = Vector2(2, 3)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d75y1"]

[sub_resource type="PlaneMesh" id="PlaneMesh_re4fe"]
material = SubResource("StandardMaterial3D_d75y1")
flip_faces = true
size = Vector2(2, 3)
orientation = 2

[node name="MapBlock" type="Node3D"]
script = ExtResource("1_xyog2")

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_1v533")

[node name="Ceil" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh = SubResource("PlaneMesh_stnwr")

[node name="WestWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.5, 0)
mesh = SubResource("PlaneMesh_1oimp")

[node name="EastWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.5, 0)
mesh = SubResource("PlaneMesh_nceey")

[node name="NorthWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1)
mesh = SubResource("PlaneMesh_7sxy3")

[node name="SouthWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 1)
mesh = SubResource("PlaneMesh_re4fe")
